# santhaskell

./: .gitignore  LICENSE  README.md  santhaskell.cabal
src/: Main.hs  Parsers.hs  Santhaskell.hs
src/Test/: Test.hs
