name:                santhaskell
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              David Sferruzza
maintainer:          david.sferruzza@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable santhaskell
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.7,
                       containers,
                       random,
                       time,
                       old-locale,
                       array,
                       directory,
                       regex-posix,
                       utf8-string,
                       parsec ==3.1.9
  default-language:    Haskell2010

test-suite test-santhaskell
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Test/Test.hs
  build-depends:       base >=4.7,
                       HTF ==0.13.0.0,
                       containers,
                       random,
                       time,
                       old-locale,
                       array,
                       directory,
                       regex-posix,
                       utf8-string,
                       parsec ==3.1.9
  default-language:    Haskell2010
